--- a/Loginn.css
+++ b/Loginn.css
@@ -32,6 +32,12 @@
     float: right; /* Align boxes to the right */
 }
 
+.heading{
+    color: white;
+    font-size: 18px;
+    text-decoration: none;
+    font-family:Arial, Helvetica, sans-serif ;
+}
 
 
 
