--- a/Textspeech.css
+++ b/Textspeech.css
@@ -61,3 +61,9 @@ button{
   border-radius: 5px;
 
 }
+.data-container{
+  font-family: monospace;
+  font-size: x-large;
+  font-weight: bold;
+  color: red;
+}
