--- a/navbar.css
+++ b/navbar.css
@@ -18,7 +18,7 @@
   
     justify-content: center;
   
-    margin-top: 250px;
+    margin-top: 50px;
   
   }
   
@@ -47,6 +47,7 @@
     letter-spacing: 5px;
   
     font-size: 20px;
+    
   
   }
   
@@ -54,9 +55,9 @@
   
     display: flex;
   
-    justify-content: space-around;
+    justify-content:space-between;
   
-    width: 30%;
+    width:fit-content;
   
   }
   
